[package]
name = "hello-world"
version = "0.1.0"
authors = ["mTvare6 <mTvare6@users.noreply.github.com>"]
edition = "2018"

[dependencies]
r_i18n            = "1.0.1"
serenity          = "0.10"
reqwest           = "0.11.4"
cookie            = "0.15.1"
cookie_store      = "0.15.0"
bytes             = "1.1.0"
url               = "2.2.2"
multipart         = "0.18.0"
ws                = "0.9.1"
rmpv              = "0.4.7"
chashmap          = "2.2.2"
serde             = "1.0.130"
french-numbers    = "1.1.2"
serde_json        = "1.0.64"
log               = "0.4.14"
fern              = "0.6.0"
diesel            = "1.4.8"
diesel_migrations = "1.4.0"
libsqlite3-sys    = "0.22.2"
rand              = "0.8.4"
ring              = "0.16.20"
uuid              = "0.8.2"
chrono            = "0.4.19"
chrono-tz         = "0.6.0"
time              = "0.2.27"
job_scheduler     = "1.2.1"
data-encoding     = "2.3.2"
jsonwebtoken      = "7.2.0"
u2f               = "0.2.0"
webauthn-rs       = "=0.3.0-alpha.9"
yubico            = "0.10.0"
dotenv            = "0.15.0"
once_cell         = "1.8.0"
num-traits        = "0.2.14"
num-derive        = "0.3.3"
tracing           = "0.1.26"
lettre            = "0.10.0-rc.3"
handlebars        = "4.1.0"
html5ever         = "0.25.1"
markup5ever_rcdom = "0.1.0"
regex             = "1.5.4"
data-url          = "0.1.0"
openssl           = "0.10.36"
percent-encoding  = "2.1.0"
idna              = "0.2.3"
pico-args         = "0.4.2"
backtrace         = "0.3.60"
paste             = "1.0.5"
money             = "0.1.0"
crate             = "0.0.2"
cash              = "0.1.5"
clap              = "3.0.0-beta.2"
num_cpus          = "1.13.0"
security          = "0.1.0"
gtk               = "0.14.0"
x11               = "2.18.2"
crossterm         = "0.17"
glam              = "0.17.3"
legion            = "0.4.0"
gl                = "0.6.0"
ash               = "0.33.3+1.2.186"
gfx               = "0.18.2"
winapi            = "0.3.9"
glfw              = "0.41.0"
distill           = "0.0.3"
aseprite          = "0.1.3"
crypto            = "0.3.0"
tensorflow        = "0.17.0"
mp4parse          = "0.11.5"
fluent-bundle     = "0.15.1"
cssparser         = "0.28.1"
plist             = "1.2.1" #macos support! with memory safety
webdriver         = "0.43.1"
amethyst          = { version = "0.15.3", features = ["empty"] }
textwrap          = "0.14.2"
nom               = "7"
hyper             = "0.13.8"
markup            = "0.12.2"
nix               = "0.20.0"
pretty_assertions = "0.7.2"
crossbeam         = "0.8"
walkdir           = "2"
tempfile          = "3"
futures           = "0.3"
num               = "0.4"
uwuify            = "^0.2"
actix-web         = "3.3.2"
curl              = "0.4.38"
a                 = "0.0.1"
oandars           = "0.1.2"
oasis             = "0.0.0"
telegram          = "0.2.0"
roots             = "0.0.7"
aries             = "0.1.0"
wayland           = "0.0.2"
wayland-client    = "0.29.0"
wayland-server    = "0.29.0"
webkit2gtk        = "0.14.0"
headless_chrome   = "0.9.0"
encoding_rs       = "0.8.28"
libc              = "0.2.102"
rand_chacha       = "0.3.1"
mpv               = "0.2.3"
rs-youtube        = "0.2.2"
winit             = "0.25.0"
stdweb            = "0.4.20"
cursive           = "0.16.3"
conrod            = "0.62.1"
stdweb-derive     = "0.5.3"
stdweb-internal-runtime = "0.1.5"
serde_urlencoded  = "0.7.0"
h2                = "0.3.4"
tokio             = "1.12.0"
i3                = "0.0.17"
tokio-i3ipc       = "0.12.1"
discord           = "0.8.1"
roux              = "1.3.7"
blocks_iterator   = "0.4.0"
random-number     = "0.1.6"
big_s             = "1.0.2"
s-rocksdb         = "0.5.0"
rusty-machine     = "0.5.4"
tinguely          = "0.1.1"
serde-wasm-bindgen = "0.3.1"
rua               = "0.18.2"
aur-fetch         = "0.10.0"
aur               = "0.2.0"
raur              = "5.0.1"
google-cloud-resource-manager = "0.1.0"
google-drive      = "0.2.4"
devolutions-crypto = "0.7.1"
github            = "0.1.2"
toml              = "0.5.8"
lazy-regex        = "2.2.1"
rand_regex        = "0.15.1"
spectral          = "0.6.0"
x11               = "2.19.1"
